--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - ci-fix-test
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,6 +14,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.x
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
       - name: build
         run: |
           pip install mkdocs mkdocs_material
